[package]
name = "saikuro-cpp-insight"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
saikuro-c = { path = "../../../Build/adapters/c", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"

[build-dependencies]
cc = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
