[package]
name = "saikuro_web_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
once_cell = "1.20"

saikuro-runtime = { path = "../../../Build/crates/saikuro-runtime", default-features = false, features = ["wasm-runtime"] }
saikuro-transport = { path = "../../../Build/crates/saikuro-transport", default-features = false, features = ["wasm-runtime", "ws-transport"] }
saikuro-core = { path = "../../../Build/crates/saikuro-core" }
saikuro-exec = { path = "../../../Build/crates/saikuro-exec", default-features = false, features = ["wasm-runtime"] }
