[package]
name = "saikuro_rust_insight"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"

saikuro = { path = "../../../Build/adapters/rust", default-features = false, features = ["wasm"] }
saikuro-exec = { path = "../../../Build/crates/saikuro-exec", default-features = false, features = ["wasm-runtime"] }
